--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,19 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="com.gowhich.androidviewpager.MainActivity">
+    <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <android.support.v4.view.PagerTitleStrip
+                android:id="@+id/pagerTitle"
+                android:layout_gravity="top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TextView
-            android:text="Hello World!"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        </android.support.v4.view.PagerTitleStrip>
+
+    </android.support.v4.view.ViewPager>
+
 </RelativeLayout>
